add & fix : AWS 추가 설정
